(add new changes on top of this file)

06-07-27 René Fritz  <r.fritz@colorcube.de>

	* Initial release